copy static file

--- a/app/index.html
+++ b/app/index.html
@@ -5,6 +5,7 @@
   <title>Document</title>
 </head>
 <body>
+  <img src="./static/pic.png" alt="">  
   <canvas id="canvas" width="600" height="600"></canvas>
 </body>
 </html>
