add csso-loader & sourcemap only in debug mode

--- a/app/index.html
+++ b/app/index.html
@@ -4,9 +4,7 @@
   <meta charset="UTF-8">
   <title>Document</title>
 </head>
-<body>
-  <ng-react></ng-react>
-  <img src="./static/img/pic.png" alt="">  
-  <canvas id="canvas" width="600" height="600"></canvas>
+<body ng-controller="AppController as app">
+  <h1>{{app.name}}</h1>
 </body>
 </html>
